# SmartReviewer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mcp-servers.json  musubix.config.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: cd.yml  ci.yml
data/documents/: .gitkeep
data/embeddings/: .gitkeep
data/evaluation/: .gitkeep
data/ontologies/: .gitkeep  README.md  basic_design.owl  test_plan.owl
docker/: .gitkeep  Dockerfile
docs/: setup_guide.md
docs/BidSpec/: BidSpec.md
docs/proposal/: README.md  proposal_cost.md  proposal_main.md  proposal_quality.md  proposal_schedule.md  proposal_team.md  proposal_technical.md
docs/reports/: README.md  completion_report.md  delivery_note.md  final_presentation.md  fy2026_plan_draft.md  poc_verification_report.md
scripts/: analyze_poc.py  run_poc.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/evaluation/: __init__.py  analyzer.py  datasets.py  embedding_eval.py  llm_eval.py  metrics.py  models.py  runner.py
src/host/: __init__.py  client.py  config.py  host.py
src/knowledge/: __init__.py  schema.py
src/pipelines/: __init__.py  build_knowledge_graph.py  index_guidelines.py  transform_guidelines_to_kg.py
src/review/: __init__.py  engine.py  executor.py  models.py
src/servers/: __init__.py
src/servers/core/: __init__.py  document_parser.py  server.py
src/servers/knowledge/: __init__.py  server.py
src/servers/rag/: __init__.py  server.py
src/setup/: __init__.py  minio_setup.py  neo4j_setup.py  qdrant_setup.py  setup_all.py
src/shared/config/: __init__.py  clients.py  settings.py
src/shared/models/: __init__.py
steering/: product.md  structure.md  tech.md
steering/rules/: constitution.md
storage/analysis_reports/: analysis_report_20260106_172159.json  analysis_report_20260106_172159.md  analysis_report_20260106_172159.txt
storage/analysis_reports_improved/: analysis_report_20260106_172619.json  analysis_report_20260106_172619.md  analysis_report_20260106_172619.txt
storage/poc_results/: poc_basic_design_20260106_171847.json  poc_summary_20260106_171847.json  poc_test_plan_20260106_171847.json
storage/poc_results_improved/: poc_basic_design_20260106_172525.json  poc_basic_design_20260106_172531.json  poc_summary_20260106_172525.json  poc_summary_20260106_172531.json  poc_test_plan_20260106_172525.json  poc_test_plan_20260106_172531.json
storage/specs/: check-items.md  design.md  gennai-requirements.md  kickoff.md  model-selection.md  plan.md  requirements.md  tasks.md
tests/: test_core_server.py  test_e2e.py  test_evaluation.py  test_host_cli.py  test_knowledge_server.py  test_rag_server.py  test_review_engine.py
(+14 files in other folders)
